--- a/index.html
+++ b/index.html
@@ -1,448 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Driver App</title>
-<style>
-  :root{
-    --blue:#1976D2;
-    --blue-2:#2196F3;
-    --green:#43A047;
-    --red:#E53935;
-    --orange:#FB8C00;
-    --grey-1:#f5f5f5;
-    --grey-2:#eeeeee;
-    --text:#111;
-    --muted:#6b6b6b;
-    --card:#ffffff;
-    --border:#d0d0d0;
-    --shadow:0 6px 20px rgba(0,0,0,.08);
-    --radius:14px;
-  }
-  *{box-sizing:border-box;font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif}
-  html,body{height:100%;margin:0;background:linear-gradient(180deg,#eceff1,#fafafa);color:var(--text)}
-  .app{max-width:420px;margin:0 auto;padding:16px 16px 80px}
-  header{
-    position:sticky;top:0;z-index:5;
-    background:var(--blue);
-    color:#fff;border-bottom:1px solid rgba(255,255,255,.2);
-    padding:14px 16px;border-radius:0 0 18px 18px;box-shadow:var(--shadow)
-  }
-  header .title{font-weight:700;letter-spacing:.3px}
-  header small{opacity:.85}
-  .logo{
-    display:flex;align-items:center;gap:10px;margin:8px 0 0;
-  }
-  .logo .dot{width:28px;height:28px;border-radius:8px;background:#fff}
-  .screen{display:none;animation:fade .2s ease}
-  .screen.active{display:block}
-  @keyframes fade{from{opacity:0;transform:translateY(4px)}to{opacity:1;transform:none}}
-  .card{background:var(--card);border:1px solid var(--border);border-radius:var(--radius);box-shadow:var(--shadow);padding:14px;margin:12px 0}
-  .row{display:flex;gap:10px}
-  .col{flex:1}
-  label{display:block;font-size:12px;color:var(--muted);margin:6px 2px}
-  input,select,textarea{
-    width:100%;padding:12px 12px;border:1px solid var(--border);border-radius:12px;
-    background:#fff;font-size:16px;outline:none
-  }
-  textarea{min-height:90px;resize:vertical}
-  .btn{
-    display:inline-block;width:100%;text-align:center;padding:12px 14px;border-radius:12px;
-    color:#fff;font-weight:700;border:none;cursor:pointer;box-shadow:var(--shadow);transition:transform .05s ease;
-    user-select:none
-  }
-  .btn:active{transform:translateY(1px)}
-  .btn-blue{background:var(--blue-2)}
-  .btn-grey{background:#757575}
-  .btn-green{background:var(--green)}
-  .btn-red{background:var(--red)}
-  .btn-orange{background:var(--orange)}
-  .stack{display:grid;gap:10px}
-  .muted{color:var(--muted)}
-  .center{text-align:center}
-  .pill{background:var(--grey-2);border:1px solid var(--border);padding:6px 10px;border-radius:999px;font-size:12px;color:var(--muted);display:inline-block}
-  .toolbar{position:fixed;bottom:0;left:0;right:0;background:#fff;border-top:1px solid var(--border);padding:12px 14px;box-shadow:0 -8px 24px rgba(0,0,0,.06)}
-  .toolbar .row{gap:12px}
-  .hidden{display:none !important}
-  .ok{color:var(--green);font-weight:700}
-  .danger{color:var(--red);font-weight:700}
-  .tap-area{padding:6px 0;cursor:pointer}
-  .list-item{padding:10px 0;border-bottom:1px dashed #ddd}
-  .list-item:last-child{border-bottom:none}
-  .hr{height:1px;background:#e5e5e5;margin:10px 0}
-  /* print for PDF */
-  @media print{
-    header,.toolbar{display:none !important}
-    .app{max-width:none}
-    .card{box-shadow:none}
-  }
-</style>
-
-<link rel="manifest" href="manifest.json">
-<meta name="theme-color" content="#1976D2">
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Driver App</title>
 </head>
 <body>
-<header>
-  <div class="title">Driver App</div>
-  <small id="today"></small>
-  <div id="logo" class="logo tap-area" title="Tap logo for hidden options">
-    <div class="dot"></div>
-    <div>
-      <div style="font-weight:700">Driver Tools</div>
-      <small class="muted">Offline • Local only</small>
-    </div>
-  </div>
-</header>
-
-<main class="app">
-
-  <!-- PIN LOGIN -->
-  <section class="screen active" id="screen-login">
-    <div class="card center">
-      <h2 style="margin:6px 0 2px">Enter PIN</h2>
-      <div class="muted" style="margin-bottom:12px">Simple lock for privacy</div>
-      <div class="stack">
-        <input id="pin-input" inputmode="numeric" maxlength="6" placeholder="•••• (default 1234)">
-        <button class="btn btn-blue" id="btn-login">Unlock</button>
-        <div id="admin-reveal" class="hidden">
-          <div class="hr"></div>
-          <div class="muted" style="margin-bottom:6px">Hidden admin login</div>
-          <input id="admin-user" placeholder="Username">
-          <input id="admin-pass" type="password" placeholder="Password">
-          <small class="muted">Appears after 10 taps on logo</small>
-        </div>
-        <div id="supervisor-reveal" class="hidden">
-          <div class="hr"></div>
-          <span class="pill">Supervisor mode enabled</span>
-          <small class="muted">Appears after 5 taps on logo</small>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- DASHBOARD -->
-  <section class="screen" id="screen-home">
-    <div class="card">
-      <div class="row">
-        <button class="btn btn-green col" id="btn-start-shift">Start Shift</button>
-        <button class="btn btn-red col" id="btn-end-shift">End Shift</button>
-      </div>
-      <div class="stack" style="margin-top:10px">
-        <button class="btn btn-blue" data-nav="hours">Log Hours</button>
-        <button class="btn btn-blue" data-nav="load">New Load</button>
-        <button class="btn btn-orange" id="btn-export">Generate PDF</button>
-        <button class="btn btn-grey" data-nav="settings">Settings</button>
-      </div>
-    </div>
-    <div class="card">
-      <div style="font-weight:700;margin-bottom:6px">This week</div>
-      <div id="summary-week" class="muted">No entries yet</div>
-    </div>
-  </section>
-
-  <!-- WORK HOURS -->
-  <section class="screen" id="screen-hours">
-    <div class="card">
-      <h3 style="margin:0 0 6px">Work Hours</h3>
-      <div class="row">
-        <div class="col">
-          <label>Start Time</label>
-          <input id="start-time" type="time" value="08:00">
-        </div>
-        <div class="col">
-          <label>End Time</label>
-          <input id="end-time" type="time" value="17:30">
-        </div>
-      </div>
-      <label>Break (minutes)</label>
-      <input id="break-mins" type="number" min="0" value="30">
-      <div class="hr"></div>
-      <div><b>Net Paid:</b> <span id="net-paid">—</span></div>
-      <div class="muted" id="warn"></div>
-      <div class="stack" style="margin-top:10px">
-        <button class="btn btn-blue" id="btn-calc">Calculate</button>
-        <button class="btn btn-green" id="btn-save-hours">Save Entry</button>
-      </div>
-    </div>
-
-    <div class="card">
-      <h4 style="margin:0 0 8px">Saved Entries (Week)</h4>
-      <div id="hours-list">—</div>
-    </div>
-  </section>
-
-  <!-- NEW LOAD -->
-  <section class="screen" id="screen-load">
-    <div class="card">
-      <h3 style="margin:0 0 6px">New Load</h3>
-      <label>Company (Header)</label>
-      <input id="company" placeholder="Vriesoord">
-      <label>Driver Name</label>
-      <input id="driver" placeholder="João">
-      <label>Start City</label>
-      <div class="row">
-        <input id="start-city" class="col" placeholder="Tap button to auto-fill via GPS (one-shot)">
-        <button class="btn btn-blue" id="btn-gps" style="width:140px">Use GPS</button>
-      </div>
-      <label>Load Description</label>
-      <textarea id="load-desc" placeholder="e.g., Frozen goods, pallets…"></textarea>
-      <div class="stack">
-        <button class="btn btn-green" id="btn-add-load">Add Load</button>
-      </div>
-    </div>
-    <div class="card">
-      <h4 style="margin:0 0 8px">Loads (local)</h4>
-      <div id="loads-list" class="muted">Empty</div>
-    </div>
-  </section>
-
-  <!-- SETTINGS -->
-  <section class="screen" id="screen-settings">
-    <div class="card">
-      <h3 style="margin:0 0 6px">Privacy</h3>
-      <div class="muted">GPS is one-tap only (no tracking). Data stored only on this device.</div>
-    </div>
-    <div class="card">
-      <h3 style="margin:0 0 6px">Security</h3>
-      <div class="row">
-        <input id="new-pin" placeholder="New PIN (4–6 digits)" class="col">
-        <button class="btn btn-blue" id="btn-pin-change" style="width:150px">Change PIN</button>
-      </div>
-      <div class="muted" style="margin-top:6px">Hidden admin login: tap logo 10× • Supervisor: 5×</div>
-    </div>
-  </section>
-
-  <!-- SUMMARY -->
-  <section class="screen" id="screen-summary">
-    <div class="card">
-      <h3 style="margin:0 0 6px">Hours Summary (Week)</h3>
-      <div id="summary-table">—</div>
-    </div>
-  </section>
-
-</main>
-
-<nav class="toolbar">
-  <div class="row">
-    <button class="btn btn-grey col" data-nav="home">Home</button>
-    <button class="btn btn-grey col" data-nav="hours">Hours</button>
-    <button class="btn btn-grey col" data-nav="load">Load</button>
-    <button class="btn btn-grey col" data-nav="summary">Summary</button>
-    <button class="btn btn-grey col" data-nav="settings">Settings</button>
-  </div>
-</nav>
-
-<script>
-(function(){
-  const $ = sel => document.querySelector(sel);
-  const $$ = sel => document.querySelectorAll(sel);
-  const fmt = n => n.toString().padStart(2,'0');
-
-  // Date header
-  const today = new Date();
-  $("#today").textContent = today.toLocaleDateString(undefined,{weekday:'short',day:'2-digit',month:'short',year:'numeric'});
-
-  // Screens
-  function showScreen(name){
-    $$(".screen").forEach(s=>s.classList.remove("active"));
-    $("#screen-"+name).classList.add("active");
-    // refresh lists on entry
-    if(name==='hours'){renderHoursList()}
-    if(name==='home'){renderWeekSummary()}
-    if(name==='summary'){renderSummaryTable()}
-  }
-  $$(".toolbar [data-nav], [data-nav]").forEach(btn=>{
-    btn.addEventListener("click",()=>showScreen(btn.getAttribute("data-nav")));
-  });
-
-  // PIN logic
-  const LS = {
-    PIN:"vr_pin",
-    HOURS:"vr_hours",
-    LOADS:"vr_loads",
-    SUPERVISOR:"vr_supervisor"
-  };
-  if(!localStorage.getItem(LS.PIN)) localStorage.setItem(LS.PIN,"1234");
-
-  $("#btn-login").addEventListener("click",()=>{
-    const p = $("#pin-input").value.trim();
-    if(p === localStorage.getItem(LS.PIN)){ 
-      showScreen("home"); 
-      return;
-    }
-    alert("Wrong PIN 🤚");
-  });
-
-  $("#btn-pin-change").addEventListener("click",()=>{
-    let p = $("#new-pin").value.trim();
-    if(!/^[0-9]{4,6}$/.test(p)){ alert("PIN must have 4–6 digits"); return; }
-    localStorage.setItem(LS.PIN,p);
-    $("#new-pin").value="";
-    alert("PIN updated ✅");
-  });
-
-  // Hidden taps on logo
-  let tapCount = 0, tapTimer = null;
-  $("#logo").addEventListener("click",()=>{
-    tapCount++;
-    clearTimeout(tapTimer);
-    tapTimer = setTimeout(()=>{tapCount=0}, 1200);
-    if(tapCount===5){
-      localStorage.setItem(LS.SUPERVISOR,"1");
-      $("#supervisor-reveal").classList.remove("hidden");
-    }
-    if(tapCount===10){
-      $("#admin-reveal").classList.remove("hidden");
-    }
-  });
-
-  // Shift helpers prefill times
-  $("#btn-start-shift").addEventListener("click",()=>{
-    const d = new Date();
-    $("#start-time").value = fmt(d.getHours())+":"+fmt(d.getMinutes());
-    showScreen("hours");
-  });
-  $("#btn-end-shift").addEventListener("click",()=>{
-    const d = new Date();
-    $("#end-time").value = fmt(d.getHours())+":"+fmt(d.getMinutes());
-    showScreen("hours");
-  });
-
-  // Work hours calculation
-  function calcNet(){
-    const st = $("#start-time").value;
-    const et = $("#end-time").value;
-    const br = parseInt($("#break-mins").value||"0",10);
-    $("#warn").textContent="";
-    if(!st || !et) return {mins:0, pretty:"—"};
-    const [sh,sm] = st.split(":").map(Number);
-    const [eh,em] = et.split(":").map(Number);
-    let start = sh*60+sm, end = eh*60+em;
-    if(end<start){ end += 24*60; $("#warn").textContent="End time is past midnight (counted as next day)."; }
-    let net = Math.max(0, end-start - br);
-    const ph = Math.floor(net/60), pm=net%60;
-    return {mins:net, pretty: ph+"h "+fmt(pm)+"m"};
-  }
-  $("#btn-calc").addEventListener("click",()=>{
-    const r = calcNet();
-    $("#net-paid").textContent = r.pretty;
-  });
-
-  $("#btn-save-hours").addEventListener("click",()=>{
-    const r = calcNet();
-    if(r.mins<=0){ alert("Nothing to save. Check the times."); return; }
-    const dayKey = new Date().toISOString().slice(0,10);
-    const entry = {
-      date: dayKey,
-      start: $("#start-time").value,
-      end: $("#end-time").value,
-      break: parseInt($("#break-mins").value||"0",10),
-      net: r.mins
-    };
-    const arr = JSON.parse(localStorage.getItem(LS.HOURS)||"[]");
-    arr.push(entry);
-    localStorage.setItem(LS.HOURS, JSON.stringify(arr));
-    $("#net-paid").textContent = r.pretty + " ✓ saved";
-    renderHoursList(); renderWeekSummary();
-  });
-
-  function getISOWeek(d){
-    d = new Date(Date.UTC(d.getFullYear(), d.getMonth(), d.getDate()));
-    const dayNum = d.getUTCDay() || 7;
-    d.setUTCDate(d.getUTCDate() + 4 - dayNum);
-    const yearStart = new Date(Date.UTC(d.getUTCFullYear(),0,1));
-    return Math.ceil((((d - yearStart) / 86400000) + 1) / 7);
-  }
-
-  function entriesThisWeek(){
-    const arr = JSON.parse(localStorage.getItem(LS.HOURS)||"[]");
-    const now = new Date();
-    const wk = getISOWeek(now), yr = now.getFullYear();
-    return arr.filter(a=>{
-      const d = new Date(a.date+"T00:00:00");
-      return getISOWeek(d)===wk && d.getFullYear()===yr;
-    });
-  }
-
-  function renderHoursList(){
-    const wrap = $("#hours-list");
-    const list = entriesThisWeek();
-    if(!list.length){ wrap.textContent = "—"; return; }
-    wrap.innerHTML = list.map(a=>{
-      const h = Math.floor(a.net/60), m = a.net%60;
-      return `<div class="list-item"><b>${new Date(a.date).toLocaleDateString(undefined,{weekday:'short',day:'2-digit',month:'short'})}</b> • ${a.start}–${a.end} • Break ${a.break}m • Net ${h}h ${fmt(m)}m</div>`
-    }).join("");
-  }
-
-  function renderWeekSummary(){
-    const list = entriesThisWeek();
-    const total = list.reduce((s,a)=>s+a.net,0);
-    const h=Math.floor(total/60), m=total%60;
-    $("#summary-week").innerHTML = list.length
-      ? `<span class="ok">Total net: ${h}h ${fmt(m)}m</span> • ${list.length} entr${list.length>1?"ies":"y"}`
-      : "No entries yet";
-  }
-
-  function renderSummaryTable(){
-    const arr = JSON.parse(localStorage.getItem(LS.HOURS)||"[]");
-    const byDay = {};
-    for(const a of arr){
-      byDay[a.date] = (byDay[a.date]||0) + a.net;
-    }
-    if(!arr.length){ $("#summary-table").textContent="—"; return; }
-    const rows = Object.entries(byDay).sort().map(([d,mins])=>{
-      const h = Math.floor(mins/60), m = mins%60;
-      return `<div class="list-item"><b>${new Date(d).toLocaleDateString()}</b> • Net ${h}h ${fmt(m)}m</div>`;
-    }).join("");
-    $("#summary-table").innerHTML = rows;
-  }
-
-  // New Load
-  function renderLoads(){
-    const arr = JSON.parse(localStorage.getItem(LS.LOADS)||"[]");
-    $("#loads-list").innerHTML = arr.length ? arr.map(l=>`<div class="list-item"><b>${l.company}</b> • ${l.driver} • ${l.city}<br><span class="muted">${l.desc}</span></div>`).join("") : "Empty";
-  }
-  $("#btn-add-load").addEventListener("click",()=>{
-    const company=$("#company").value||"Vriesoord";
-    const driver=$("#driver").value||"Driver";
-    const city=$("#start-city").value||"Unknown";
-    const desc=$("#load-desc").value||"";
-    const arr=JSON.parse(localStorage.getItem(LS.LOADS)||"[]");
-    arr.push({company,driver,city,desc,ts:Date.now()});
-    localStorage.setItem(LS.LOADS,JSON.stringify(arr));
-    renderLoads();
-    alert("Load saved locally ✅");
-  });
-  $("#btn-gps").addEventListener("click",()=>{
-    if(!navigator.geolocation){ alert("Geolocation not supported"); return; }
-    navigator.geolocation.getCurrentPosition(
-      (pos)=>{
-        const {latitude,longitude} = pos.coords;
-        $("#start-city").value = `${latitude.toFixed(5)}, ${longitude.toFixed(5)}`; // one-shot coords
-      },
-      (err)=>alert("GPS error: "+err.message),
-      {enableHighAccuracy:true,timeout:8000,maximumAge:0}
-    );
-  });
-
-  // Export as PDF via print
-  $("#btn-export").addEventListener("click",()=>{
-    window.print();
-  });
-
-  // Init
-  renderLoads(); renderWeekSummary(); renderSummaryTable();
-})();</script>
-
-<script>
-if ('serviceWorker' in navigator) {
-  window.addEventListener('load', () => {
-    navigator.serviceWorker.register('./service-worker.js').catch(console.error);
-  });
-}
-</script>
-
+  <h1>Driver App</h1>
+  <p>Versão com login obrigatório, admin escondido (10 taps no logo), horas com GPS e cargas com trailer/temp/unload.</p>
 </body>
 </html>
