--- a/index.html
+++ b/index.html
@@ -1,205 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Driver App</title>
-<link rel="manifest" href="./manifest.json">
-<link rel="stylesheet" href="./style.css?v=10">
-<meta name="theme-color" content="#1976D2">
-<script defer src="./script.js?v=10"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Driver App</title>
+  <link rel="stylesheet" href="style.css">
+  <script defer src="script.js"></script>
 </head>
 <body>
-<header class="app-bar">
-  <div class="title">Driver App</div>
-  <small id="today"></small>
-  <div id="logo" class="logo"><div class="dot"></div>
-    <div><b>Driver Tools</b><br><small class="muted">Offline • Local only</small></div>
-  </div>
-</header>
-
-<main class="app">
-  <!-- LOGIN -->
-  <section id="screen-login" class="screen active">
-    <div class="card center">
-      <h2>Enter PIN</h2>
-      <div class="muted">Default 1234</div>
-      <input id="pin-input" inputmode="numeric" maxlength="6" placeholder="••••">
-      <button class="btn btn-blue" id="btn-login">Unlock</button>
-    </div>
+  <h2>Driver App</h2>
+  <section id="login">
+    <h3>Enter PIN</h3>
+    <input type="password" id="pinInput" placeholder="Default 1234">
+    <button onclick="unlockApp()">Unlock</button>
   </section>
 
-  <!-- HOME -->
-  <section id="screen-home" class="screen">
-    <div class="card">
-      <div class="card-title">This week</div>
-      <div id="summary-week" class="muted">No entries yet</div>
-    </div>
-    <div class="card no-print">
-      <div class="card-title">Quick actions</div>
-      <div class="chips">
-        <button class="chip" data-nav="hours">+ Hours</button>
-        <button class="chip" data-nav="load">+ Load</button>
-        <button class="chip" data-nav="summary">Summary</button>
-        <button class="chip" data-nav="settings">Security</button>
-      </div>
-    </div>
-    <div class="card no-print">
-      <div class="card-title">Coming soon 🚀</div>
-      <ul class="list">
-        <li>Gráficos</li>
-        <li>Fuel section</li>
-        <li>Maintenance section</li>
-        <li><b>Sistema multilíngua</b></li>
-        <li>PDF (horas & cargas)</li>
-      </ul>
-    </div>
+  <section id="mainApp" style="display:none;">
+    <h3>This week</h3>
+    <div id="weeklySummary">No entries yet</div>
+    <h3>Quick actions</h3>
+    <button onclick="showHoursForm()">+ Hours</button>
+    <button onclick="showLoadForm()">+ Load</button>
+    <button onclick="showSummary()">Summary</button>
+
+    <h3>Coming soon 🚀</h3>
+    <ul>
+      <li>📊 Gráficos</li>
+      <li>⛽ Fuel section</li>
+      <li>🛠️ Maintenance section</li>
+      <li><b>Sistema multilingua</b></li>
+      <li>📄 PDF (horas & cargas)</li>
+    </ul>
+
+    <h3>Work Hours</h3>
+    <label>Entry Date <input type="date" id="entryDate"></label><br>
+    <label>Start Time <input type="time" id="startTime"></label><br>
+    <label>End Time <input type="time" id="endTime"></label><br>
+
+    <label>Start Location <input type="text" id="startLoc" placeholder="Country - City"></label>
+    <button onclick="getLocation('startLoc')">GPS Start</button><br>
+
+    <label>End Location <input type="text" id="endLoc" placeholder="Country - City"></label>
+    <button onclick="getLocation('endLoc')">GPS End</button><br>
+
+    <label>Break (minutes) <input type="number" id="breakMins" value="0"></label><br>
+    <button onclick="saveEntry()">Save Entry</button>
+
+    <h3>Saved (this week)</h3>
+    <ul id="entriesList"></ul>
   </section>
-
-  <!-- HOURS -->
-  <section id="screen-hours" class="screen">
-    <div class="card">
-      <h3 class="card-title">Work Hours</h3>
-
-      <label>Entry Date</label>
-      <input id="hours-date" type="date">
-
-      <div class="row">
-        <button class="btn btn-green col" id="btn-start-now">Start</button>
-        <button class="btn btn-red col" id="btn-end-now">End</button>
-      </div>
-
-      <div class="row">
-        <div class="col">
-          <label>Start Time</label><input id="start-time" type="time">
-        </div>
-        <div class="col">
-          <label>End Time</label><input id="end-time" type="time">
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col">
-          <label>Start Location</label>
-          <input id="loc-start" placeholder="Country - City (auto) • long‑press 3s p/ manual">
-          <div id="hint-start" class="inline-hint hidden"></div>
-          <button class="btn btn-blue" id="btn-gps-start">GPS Start</button>
-        </div>
-        <div class="col">
-          <label>End Location</label>
-          <input id="loc-end" placeholder="Country - City (auto) • long‑press 3s p/ manual">
-          <div id="hint-end" class="inline-hint hidden"></div>
-          <button class="btn btn-blue" id="btn-gps-end">GPS End</button>
-        </div>
-      </div>
-
-      <label>Break (minutes)</label>
-      <input id="break-mins" type="number" min="0" value="0">
-
-      <label>Type</label>
-      <div class="row">
-        <button id="kind-work" class="btn btn-grey col active">Work</button>
-        <button id="kind-drive" class="btn btn-grey col">Driving</button>
-      </div>
-
-      <div class="sum">Net: <b id="net-paid">—</b></div>
-      <div class="muted" id="warn"></div>
-
-      <div class="row">
-        <button class="btn btn-blue col" id="btn-calc">Calculate</button>
-        <button class="btn btn-green col" id="btn-save-hours">Save Entry</button>
-      </div>
-    </div>
-
-    <div class="card">
-      <h4 class="card-title">Saved (this week)</h4>
-      <div id="hours-list" class="muted">—</div>
-    </div>
-  </section>
-
-  <!-- LOADS -->
-  <section id="screen-load" class="screen">
-    <div class="card">
-      <h3 class="card-title">New Load</h3>
-      <label>Company</label><input id="company" placeholder="Header">
-      <label>Start City</label><input id="start-city" placeholder="City / Address">
-      <label>Load Date</label><input id="load-date" type="date">
-      <label>Trailer Number</label><input id="trailer-number" placeholder="TR-12345">
-
-      <label>Load Temperature (°C)</label>
-      <input id="load-temp" type="range" min="-25" max="20" step="1" value="0" oninput="document.getElementById('ltv').textContent=this.value+'°C'">
-      <div id="ltv" class="muted">0°C</div>
-
-      <label>Load Description</label><textarea id="load-desc" placeholder="Frozen goods, pallets…"></textarea>
-
-      <label>Unload Date</label><input id="unload-date" type="date">
-      <label>Unload Location</label><input id="unload-location" placeholder="City / Address">
-
-      <label>Unload Temperature (°C)</label>
-      <input id="unload-temp" type="range" min="-25" max="20" step="1" value="0" oninput="document.getElementById('utv').textContent=this.value+'°C'">
-      <div id="utv" class="muted">0°C</div>
-
-      <button class="btn btn-green" id="btn-add-load">Add Load</button>
-    </div>
-
-    <div class="card">
-      <h4 class="card-title">Loads (local)</h4>
-      <div id="loads-list" class="muted">Empty</div>
-    </div>
-  </section>
-
-  <!-- SUMMARY -->
-  <section id="screen-summary" class="screen">
-    <div class="card">
-      <h3 class="card-title">Summary</h3>
-      <div class="row no-print" id="summary-toggle">
-        <button data-vm="net" class="btn btn-grey col active">Net</button>
-        <button data-vm="drive" class="btn btn-grey col">Driving</button>
-      </div>
-      <div id="summary-head" style="margin-top:8px">—</div>
-      <div id="summary-table" style="margin-top:8px">—</div>
-    </div>
-  </section>
-
-  <!-- SETTINGS -->
-  <section id="screen-settings" class="screen">
-    <div class="card">
-      <h3 class="card-title">Security</h3>
-      <div class="row">
-        <input id="new-pin" placeholder="New PIN (4–6 digits)" class="col">
-        <button class="btn btn-blue" id="btn-pin-change" style="width:150px">Change PIN</button>
-      </div>
-    </div>
-  </section>
-</main>
-
-<nav class="toolbar">
-  <div class="row">
-    <button class="btn btn-grey col" data-nav="home">🏠</button>
-    <button class="btn btn-grey col" data-nav="hours">⏱️</button>
-    <button class="btn btn-grey col" data-nav="load">📦</button>
-    <button class="btn btn-grey col" data-nav="summary">📊</button>
-    <button class="btn btn-grey col" data-nav="settings">⚙️</button>
-  </div>
-</nav>
-
-<!-- Tiny modal -->
-<div id="modal" class="modal hidden">
-  <div class="modal-box">
-    <h3>Atenção</h3>
-    <p id="modal-msg">...</p>
-    <div class="row" style="justify-content:flex-end">
-      <button id="modal-ok" class="btn btn-blue" style="width:auto;min-width:120px">OK</button>
-    </div>
-  </div>
-</div>
-
-<script>
-  if ('serviceWorker' in navigator) {
-    window.addEventListener('load', () => {
-      navigator.serviceWorker.register('./service-worker.js?v=10');
-    });
-  }
-</script>
 </body>
 </html>
